Made some changes to tooltips, textpaths, bubble sizes and mobile styling that mostly fixes screen size and font size issues. The text paths are still too small to read on mobile, but there's just not much more room to grow before they stretch onto four lines and look really weird. The tooltips don't go offscreen or become unreadable as often, but they still do sometimes. There are some more adjustments to make, but this is a little better for now.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,15 +196,36 @@ strong {
  }
 
  .d3-tip {
-    min-width: 220px;
+    /*min-width: 220px;*/
     max-width: 480px;
     background-color: white;
     color: black;
     border-radius: 5px;
     border: 1px solid black;
     z-index: 100;
-    padding: 12px;
+    padding: 10px;
     line-height: 1;
+}
+
+.tip-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2px;
+}
+
+.tip-grid__title {
+    grid-column: 1 / 3;
+    justify-self: center;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.tip-grid__name {
+    justify-self: left;
+}
+
+.tip-grid_number {
+    justify-self: right;
 }
 
 
@@ -220,7 +241,7 @@ strong {
 
     .slider-div {
         width: 90%;
-        margin: 0 auto 30px auto;
+        margin: 5px auto 30px auto;
     }
 
     #nodelink-tile, #network-tile {
